# Fabric

./: .gitignore  CMakeLists.txt  README.md  Setup.bat  premake5.lua
core/: premake5.lua
core/include/: engine.hpp  fabric.hpp
core/source/common/: common_headers.hpp  concepts.hpp  identifier.hpp
core/source/memory/: memory.cpp  memory.hpp
core/source/scene/: common.hpp  entity.hpp  registry.cpp  registry.hpp  scene.cpp  scene.hpp  sparse_set.hpp
core/source/utilities/: graph.hpp  sparse_set.hpp  utilities.hpp
editor/: editor.csproj  premake5.lua
editor/Project Templates/Empty Project/: template.json
editor/Properties/: Settings.Designer.cs
editor/Source/: App.xaml  App.xaml.cs
editor/Source/Core/: Logger.cs  ObservableObject.cs  RelayCommand.cs  Serializer.cs
editor/Source/Editors/: DockSpace.cs  DockSpaceView.xaml  DockSpaceView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
editor/Source/Project/: CreateProject.cs  CreateProjectView.xaml  CreateProjectView.xaml.cs  GameProject.cs  OpenProject.cs  OpenProjectView.xaml  OpenProjectView.xaml.cs  ProjectBrowser.cs  ProjectBrowserWindow.xaml  ProjectBrowserWindow.xaml.cs
editor/Source/Resources/: ControlStyles.xaml
editor/source/: App.xaml  EnginePathDialog.xaml  EnginePathDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
editor/source/core/: CommandHistory.xaml  CommandHistory.xaml.cs  FolderBrowser.cs  Logger.cs  LoggerConsole.xaml  LoggerConsole.xaml.cs  RelayCommand.cs  Serializer.cs  UndoRedo.cs  Utilities.cs  ViewModelBase.cs
editor/source/editor_types/level_editor/: ComponentView.xaml  ComponentView.xaml.cs  EntityInspectorView.xaml  EntityInspectorView.xaml.cs  LevelEditorView.xaml  LevelEditorView.xaml.cs  SceneHierarchyView.xaml  SceneHierarchyView.xaml.cs  ScriptView.xaml  ScriptView.xaml.cs  TransformView.xaml  TransformView.xaml.cs
editor/source/game_development/: NewScriptDialog.xaml  NewScriptDialog.xaml.cs  VisualStudio.cs
editor/source/game_entity/: Component.cs  ComponentFactory.cs  Entity.cs  Script.cs  Transform.cs
editor/source/game_project/: CreateProjectView.xaml  CreateProjectView.xaml.cs  CreateProjectViewModel.cs  OpenProjectView.xaml  OpenProjectView.xaml.cs  OpenProjectViewModel.cs  Project.cs  ProjectBrowserView.xaml  ProjectBrowserView.xaml.cs  ProjectBrowserViewModel.cs  Scene.cs
engine/core/: CMakeLists.txt
engine/core/include/: fabric.hpp
engine/core/source/common/: common_headers.hpp  concepts.hpp
engine/core/source/memory/: memory.cpp
engine/core/source/scene/: scene.cpp  scene.hpp
engine/core/source/utilities/: math.hpp  sparse_set.hpp
scripts/: setup.bat  setup.cmake
tests/: premake5.lua
tests/source/: EntitySpawner.cpp  EntitySpawner.hpp  entity_component.hpp  main.cpp  script_test.cpp  script_test.hpp  serialization_test.hpp
tools/tests/: CMakeLists.txt
tools/tests/source/: entity_component.hpp  main.cpp
